forgot to add target blank to open links in new tab

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
   <section class="connect">
     <div class="socialContainer">
       <div class="social">
-        <a href="https://www.facebook.com/ContactMNMK9/"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/mnm_k9/"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.yelp.ca/biz/mnm-k-9-mississauga"><i class="fab fa-yelp"></i></a>
+        <a href="https://www.facebook.com/ContactMNMK9/" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/mnm_k9/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.yelp.ca/biz/mnm-k-9-mississauga" target="_blank"><i class="fab fa-yelp"></i></a>
       </div>
     </div>
   </section>
@@ -153,8 +153,8 @@
         <h2>Services</h2>
         <p class="quote">We at MNM K-9 represent the next generation of the dog industry. We provide a range of services to help owners and their canine partner become what we like to call “ single pack”. To learn to communicate with one another like you never thought was possible. Our goal is to help humans and canines live alongside each other in harmony. We strive to help every canine whether small or big, young or old, find a forever home with a loving family. Check out our Facebook and Instagram for photos!</p>
         <div class="social">
-          <a href="https://www.facebook.com/ContactMNMK9/"><i class="fab fa-facebook"></i></a>
-          <a href="https://www.instagram.com/mnm_k9/"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/ContactMNMK9/" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.instagram.com/mnm_k9/" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
 
@@ -225,19 +225,19 @@
       <div class="contactContainer wrapper">
         <div class="itemContainer">
           <div class="icon emailIcon">
-            <i class="far fa-envelope"></i>
+            <i class="far fa-envelope"><a href="mailto:tylermelnike@mnmk9.ca"></a></i>
           </div>
           <div class="contactLink">
-            <a href="mailto:tylermelnike@mnmk9.ca">tylermelnike@mnmk9.ca</a>
+            <a href="mailto:tylermelnike@mnmk9.ca" target="_blank">tylermelnike@mnmk9.ca</a>
           </div>
         </div>
 
         <div class="itemContainer">
           <div class="icon phoneIcon">
-            <i class="fas fa-phone"></i>
+            <i class="fas fa-phone"><a href="tel:416-844-7990" target="_blank"></a></i>
           </div>
           <div class="contactLink">
-            <a href="tel:1+416-844-7990">416-844-7990</a>
+            <a href="tel:416-844-7990" target="_blank">416-844-7990</a>
           </div>
         </div>
 
@@ -246,7 +246,7 @@
             <i class="fas fa-map-marker"></i>
           </div>
           <div class="contactLink">
-            <a href="https://goo.gl/maps/or51NyYYTWn" class="embeddedMap">Servicing GTA</a>
+            <a href="https://goo.gl/maps/or51NyYYTWn" class="embeddedMap" target="_blank">Servicing GTA</a>
           </div>
         </div>
       </div>
@@ -277,7 +277,7 @@
         </form>
 
         <div class="googleMap">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2893.7587551730603!2d-79.65097378425267!3d43.507367969866216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b44821ff31767%3A0x8549a207f25fcfc0!2s2492+Harman+Ct%2C+Mississauga%2C+ON+L5J+1T8!5e0!3m2!1sen!2sca!4v1537563935316" width="550" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2893.7587551730603!2d-79.65097378425267!3d43.507367969866216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b44821ff31767%3A0x8549a207f25fcfc0!2s2492+Harman+Ct%2C+Mississauga%2C+ON+L5J+1T8!5e0!3m2!1sen!2sca!4v1537563935316" width="550" height="450" frameborder="0" style="border:0" allowfullscreen target="_blank"></iframe>
         </div>
       </div>
     </section>
