added images for merch section and set up html for it as well. Made hamburger menu on desktop due to color issues

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <!--HEADER BEGINS-->
     <header>
       <div class="headerContainer">
-        <div class="logoContainer">
+        <div class="logoContainer wrapper">
           <img src="assets/MNM_K9_R102.jpg" alt="logo of MNM-K9" class="logo">
         </div>
   
         <!--NAVIGATION BEGINS-->
-        <p class="hamburger"><i class="fas fa-bars"></i></p>
+        <p class="hamburger wrapper"><i class="fas fa-bars"></i></p>
         <div class="navigationContainer">
           <nav class="menu">
             <p class="exitResponsive"><i class="fas fa-times"></i></p>
@@ -166,7 +166,7 @@
           <div class="back">
             <div class="pricing">
               <p class="desktop-hidden">K-9 Training</p>
-              <p>In Home Training Session</p>
+              <p>In Home Training</p>
               <p>$80 + HST per session</p>
             </div>
           </div>
@@ -193,8 +193,7 @@
             <div class="pricing">
               <p class="desktop-hidden">Boarding</p>
               <p>One Night: $60.00</p>
-              <p>Two Nights: $90.00</p>
-              <p>Three Nights: $120.00</p>
+              <p>Additional Nights: $30.00</p>
             </div>
           </div>
         </div>
@@ -207,8 +206,8 @@
             <div class="pricing">
               <p class="desktop-hidden">Grooming Packages</p>
               <p>Bath and Nails: $50</p>
-              <p>Nail trim: $10</p>
-              <p>Dremul: $30</p>
+              <p>Nail Trim: $10</p>
+              <p>Dremel: $30</p>
               <p>Bath: $40</p>
               <p>Face and Feet Trim: $60</p>
               <p>De-Shedding Package: $60</p>
@@ -218,6 +217,108 @@
       </div>
     </section>
     <!--SERVICES SECTION ENDS-->
+
+    <!-- MERCHANDISE SECTION BEGINS -->
+    <section class="merchandise wrapper">
+      <div class="storeContainer">
+          <div class="productImage">
+            <img src="assets/carabiner.png" alt="product image of carabiner for dogs">
+          </div>
+          <div class="productText">
+            <h3>Carabiner</h3>
+            <p>$2</p>
+          </div>
+
+          <div class="productImage">
+            <img src="assets/blue-collar.png" alt="product image of a blue glow collar for dogs">
+          </div>
+          <div class="productText">
+            <h3>Blue Glow Collar</h3>
+            <p>$20</p>
+          </div>
+
+          <div class="productImage">
+            <img src="assets/red-collar.png" alt="product image of red glow collar for dogs">
+          </div>
+          <div class="productText">
+            <h3>Red Glow Collar</h3>
+            <p>$20</p>
+          </div>
+
+          <div class="productImage">
+            <img src="assets/pink-collar.png" alt="product image of a pink glow collar for dogs">
+          </div>
+          <div class="productText">
+            <h3>Pink Glow Collar</h3>
+            <p>$20</p>
+          </div>
+
+          <div class="productImage">
+            <img src="assets/neon-collar.png" alt="product image of a neon glow collar for dogs">
+          </div>
+          <div class="productText">
+            <h3>Neon Glow Collar</h3>
+            <p>$20</p>
+          </div>
+
+          <div class="productImage">
+            <img src="assets/choke-chain.png" alt="product image of a Pop and Release Collar for dogs">
+          </div>
+          <div class="productText">
+            <h3>Pop & Release Collar</h3>
+            <p>$20</p>
+          </div>
+
+          <div class="productImage">
+            <img src="assets/martingale.png" alt="product image of a martingale for dogs">
+          </div>
+          <div class="productText">
+            <h3>Martingale</h3>
+            <p>$15</p>
+          </div>
+
+          <div class="productImage">
+            <img src="assets/two-foot-lead.png" alt="product image of a two foot lead for dogs">
+          </div>
+          <div class="productText">
+            <h3>Two Foot Lead</h3>
+            <p>$30</p>
+          </div>
+
+          <div class="productImage">
+            <img src="assets/small-leash.png" alt="product image of a small leash for dogs">
+          </div>
+          <div class="productText">
+            <h3>Small (1/4") Leash</h3>
+            <p>$30</p>
+          </div>
+
+          <div class="productImage">
+            <img src="assets/medium-leash.png" alt="product image of a medium leash for dogs">
+          </div>
+          <div class="productText">
+            <h3>Medium (1/2") Leash</h3>
+            <p>$40</p>
+          </div>
+
+          <div class="productImage">
+            <img src="assets/large-leash.png" alt="product image of a large leash for dogs">
+          </div>
+          <div class="productText">
+            <h3>Large (1") Leash</h3>
+            <p>$50</p>
+          </div>
+
+          <div class="productImage">
+            <img src="assets/whistle.png" alt="product image of a white whistle for dogs">
+          </div>
+          <div class="productText">
+            <h3>White Whistle</h3>
+            <p>$20</p>
+          </div>
+      </div>
+    </section>
+    <!-- MERCHANDISE SECTION ENDS -->
 
     <!--CONTACT SECTION STARTS-->
     <section class="contact wow slideInLeft" data-wow-duration="800ms" id="Contact">
