took out 'package' to fit on one line

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               <p>Dremel: $30</p>
               <p>Bath: $40</p>
               <p>Face and Feet Trim: $60</p>
-              <p>De-Shedding Package: $60</p>
+              <p>De-Shedding: $60</p>
             </div>
           </div>
         </div>
