styling complete for desktop for merch section

--- a/index.html
+++ b/index.html
@@ -219,103 +219,128 @@
     <!--SERVICES SECTION ENDS-->
 
     <!-- MERCHANDISE SECTION BEGINS -->
-    <section class="merchandise wrapper">
-      <div class="storeContainer">
+    <section class="merchandise">
+      <h2>Merchandise</h2>
+      <div class="storeContainer wrapper">
+        <div class="productContainer">
           <div class="productImage">
             <img src="assets/carabiner.png" alt="product image of carabiner for dogs">
           </div>
           <div class="productText">
-            <h3>Carabiner</h3>
+            <h4>Carabiner</h4>
             <p>$2</p>
           </div>
+        </div>
 
+        <div class="productContainer">
           <div class="productImage">
             <img src="assets/blue-collar.png" alt="product image of a blue glow collar for dogs">
           </div>
           <div class="productText">
-            <h3>Blue Glow Collar</h3>
+            <h4>Blue Glow Collar</h4>
             <p>$20</p>
           </div>
+        </div>
 
+        <div class="productContainer">
           <div class="productImage">
             <img src="assets/red-collar.png" alt="product image of red glow collar for dogs">
           </div>
           <div class="productText">
-            <h3>Red Glow Collar</h3>
+            <h4>Red Glow Collar</h4>
             <p>$20</p>
           </div>
+        </div>
 
+        <div class="productContainer">
           <div class="productImage">
             <img src="assets/pink-collar.png" alt="product image of a pink glow collar for dogs">
           </div>
           <div class="productText">
-            <h3>Pink Glow Collar</h3>
+            <h4>Pink Glow Collar</h4>
             <p>$20</p>
           </div>
+        </div>
 
+        <div class="productContainer">
           <div class="productImage">
             <img src="assets/neon-collar.png" alt="product image of a neon glow collar for dogs">
           </div>
           <div class="productText">
-            <h3>Neon Glow Collar</h3>
+            <h4>Neon Glow Collar</h4>
             <p>$20</p>
           </div>
+        </div>
 
+        <div class="productContainer">
           <div class="productImage">
             <img src="assets/choke-chain.png" alt="product image of a Pop and Release Collar for dogs">
           </div>
           <div class="productText">
-            <h3>Pop & Release Collar</h3>
+            <h4>Pop & Release Collar</h4>
             <p>$20</p>
           </div>
+        </div>
 
+        <div class="productContainer">
           <div class="productImage">
             <img src="assets/martingale.png" alt="product image of a martingale for dogs">
           </div>
           <div class="productText">
-            <h3>Martingale</h3>
+            <h4>Martingale</h4>
             <p>$15</p>
           </div>
+        </div>
 
+        <div class="productContainer">
           <div class="productImage">
             <img src="assets/two-foot-lead.png" alt="product image of a two foot lead for dogs">
           </div>
           <div class="productText">
-            <h3>Two Foot Lead</h3>
+            <h4>Two Foot Lead</h4>
             <p>$30</p>
           </div>
+        </div>
 
+        <div class="productContainer">
           <div class="productImage">
             <img src="assets/small-leash.png" alt="product image of a small leash for dogs">
           </div>
           <div class="productText">
-            <h3>Small (1/4") Leash</h3>
+            <h4>Small (1/4") Leash</h4>
             <p>$30</p>
           </div>
+        </div>
 
+        <div class="productContainer">
           <div class="productImage">
             <img src="assets/medium-leash.png" alt="product image of a medium leash for dogs">
           </div>
           <div class="productText">
-            <h3>Medium (1/2") Leash</h3>
+            <h4>Medium (1/2") Leash</h4>
             <p>$40</p>
           </div>
+        </div>
 
+        <div class="productContainer">
           <div class="productImage">
             <img src="assets/large-leash.png" alt="product image of a large leash for dogs">
           </div>
           <div class="productText">
-            <h3>Large (1") Leash</h3>
+            <h4>Large (1") Leash</h4>
             <p>$50</p>
           </div>
+        </div>
 
+        <div class="productContainer">
           <div class="productImage">
-            <img src="assets/whistle.png" alt="product image of a white whistle for dogs">
+            <img src="assets/whistle.png" alt="product image of a recall whistle for dogs">
           </div>
           <div class="productText">
-            <h3>White Whistle</h3>
+            <h4>Recall Whistle</h4>
             <p>$20</p>
           </div>
+        </div>  
       </div>
     </section>
     <!-- MERCHANDISE SECTION ENDS -->
