added merchandise link

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               <li><a href="#About" class="hvr-underline-from-center">About</a></li>
               <li><a href="#Gallery" class="hvr-underline-from-center">Gallery</a></li>
               <li><a href="#Services" class="hvr-underline-from-center">Services</a></li>
+              <li><a href="#Merchandise" class="hvr-underline-from-center">Merchandise</a></li>
               <li><a href="#Contact" class="hvr-underline-from-center">Contact</a></li>
             </ul>
           </nav>
@@ -219,7 +220,7 @@
     <!--SERVICES SECTION ENDS-->
 
     <!-- MERCHANDISE SECTION BEGINS -->
-    <section class="merchandise">
+    <section class="merchandise" id="merchandise">
       <h2>Merchandise</h2>
       <div class="storeContainer wrapper">
         <div class="productContainer">
