I'm a wizard - made merchandise section responsive without a single media query

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <!--SERVICES SECTION ENDS-->
 
     <!-- MERCHANDISE SECTION BEGINS -->
-    <section class="merchandise" id="merchandise">
+    <section class="merchandise" id="Merchandise">
       <h2>Merchandise</h2>
       <div class="storeContainer wrapper">
         <div class="productContainer">
