fixed form and added hover state to sumbit btn

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
           <textarea placeholder="How can I help you and your pup?" name="name"></textarea>
 
           <label for="submit" class="visuallyhidden">Submit</label>
-          <input type="submit" value="Send" placeholder="Submit">
+          <input type="submit" value="Submit" placeholder="Submit">
         </form>
 
         <div class="googleMap">
