changed some wording in contact section, and changed back of service card background

--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
       </div>
 
       <div class="formInfo wrapper">
-        <h3>Schedule a Tour or Request a Service</h3>
-        <p>We at MNM-K9 will get back to you within 24 hours</p>
+        <h3>Connect with MNM-K9 Below!</h3>
+        <p>Someone will get back to you within 24 hours</p>
       </div>
       <div class="formContainer wrapper">
         <form action="https://formspree.io/tylermelnike@mnmk9.ca" method="POST" name="callToAction" class="callToAction">
