had to change phone number

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             <i class="fas fa-phone"><a href="tel:416-844-7990" target="_blank"></a></i>
           </div>
           <div class="contactLink">
-            <a href="tel:416-844-7990" target="_blank">416-844-7990</a>
+            <a href="tel:416-844-7990" target="_blank">416-884-7990</a>
           </div>
         </div>
 
@@ -387,16 +387,40 @@
             <option value="Grooming" name="name">Grooming</option>
           </select>
 
-          <label for="name" class="visuallyhidden">Name</label>
-          <input type="text" name="name" placeholder="Name" required>
+          <div class="inputContainer">
+            <label for="name" class="visuallyhidden">Name</label>
+            <input type="text" name="name" placeholder="Name" required>
+            <span class="bottom"></span>
+            <span class="right"></span>
+            <span class="top"></span>
+            <span class="left"></span>
+          </div>  
 
-          <label for="email" class="visuallyhidden">Email</label>
-          <input type="email" name="_replyto" placeholder="Email" required>
+          <div class="inputContainer">
+            <label for="email" class="visuallyhidden">Email</label>
+            <input type="email" name="_replyto" placeholder="Email" required>
+            <span class="bottom"></span>
+            <span class="right"></span>
+            <span class="top"></span>
+            <span class="left"></span>
+          </div>
 
-          <textarea placeholder="How can I help you and your pup?" name="name"></textarea>
+          <div class="inputContainer">
+            <textarea placeholder="How can I help you and your pup?" name="name"></textarea>
+            <span class="bottom"></span>
+            <span class="right"></span>
+            <span class="top"></span>
+            <span class="left"></span>
+          </div>
 
-          <label for="submit" class="visuallyhidden">Submit</label>
-          <input type="submit" value="Submit" placeholder="Submit">
+          <div class="inputContainer">
+            <label for="submit" class="visuallyhidden">Submit</label>
+            <input type="submit" value="Submit" placeholder="Submit">
+            <span class="bottom"></span>
+            <span class="right"></span>
+            <span class="top"></span>
+            <span class="left"></span>
+          </div>
         </form>
 
         <div class="googleMap">
